--- a/spec/acceptance/nodesets/default.yml
+++ b/spec/acceptance/nodesets/default.yml
@@ -7,17 +7,19 @@ HOSTS:
     box: puppetlabs/ubuntu-14.04-64-nocm
     hypervisor: vagrant_workstation
     ip: 10.11.0.10
-    vagrant_memsize: 2048
+    vagrant_memsize: 8096
   bigip:
     roles:
       - f5
-    platform: el-6-x86_64
+    platform: f5-11.6.0-25mbps-good
     box: BIGIP-13.1.0.1-0.0.8-vmware
     hypervisor: vagrant_workstation
     user: vagrant
     ip: 10.11.0.11
     synced_folder: disabled
     vagrant_memsize: 2048
+    ssh:
+      password: vagrant
 CONFIG:
   type: foss
   log_level: debug
