--- a/spec/acceptance/nodesets/default.yml
+++ b/spec/acceptance/nodesets/default.yml
@@ -5,7 +5,7 @@ HOSTS:
       - default
     platform: ubuntu-1404-x86_64
     box: puppetlabs/ubuntu-14.04-64-nocm
-    hypervisor: vagrant_workstation
+    hypervisor: vagrant_desktop
     ip: 10.11.0.10
     vagrant_memsize: 8096
   bigip:
@@ -13,7 +13,7 @@ HOSTS:
       - f5
     platform: f5-11.6.0-25mbps-good
     box: BIGIP-13.1.0.1-0.0.8-vmware
-    hypervisor: vagrant_workstation
+    hypervisor: vagrant_desktop
     user: vagrant
     ip: 10.11.0.11
     synced_folder: disabled
